Slant labels of correlation

--- a/164parm_Currentstatus.Rmd
+++ b/164parm_Currentstatus.Rmd
@@ -462,12 +462,12 @@ cat("Data after removing missing predictors: n =", nrow(df_analysis), "\n")
 ### b. Correlations   
 ```{r, fig.width=10, fig.height=10}
 
-gg <- GGally::ggcorr(df_analysis, method = c("complete.obs", "kendall"), label = TRUE) # +
-gg + theme(plot.margin = unit(c(.8, 2, .8, 2.5), "cm"))
-
-# SHOULD also workaccording to ?element_rect (update ggplot2?)
-# gg + theme(plot.margin = margin(.6, .5, .6, 1.7, "cm"))
-
+gg <- GGally::ggcorr(
+  df_analysis, 
+  method = c("complete.obs", "kendall"), 
+  label = TRUE,
+  hjust = 0.9, angle = -30) # +                    # slanted labels
+gg + coord_cartesian(x = c(-2, 20), y = c(-2,22))  # fix margins
 
 ```
 
