--- a/164parm_Currentstatus.Rmd
+++ b/164parm_Currentstatus.Rmd
@@ -9,15 +9,15 @@ output:
     keep_md: true
 params:
   document_title: 
-    value: '164x Analyse NO3 status - test run'
+    value: '164ab1 Analyse NO3 medians 2012-2016 - not area'
   text_line1: 
     value: 'Analysis of NO3 medians (2012-2016)'
   text_line2: 
-    value: 'Data with NO3, TOTN_dep, slope_dep_vs_time, TOC, tmp (temperature), pre (precipitation)'
+    value: 'Dataset: NO3 medians data set incl. TOC'
   medians_filename:
     value: 'medians_2012-2016_no3.csv'        
   selected_vars: 
-    value: 'median_no3,catchment_area, median_toc,slope_dep_vs_time, TOTN_dep, latitude, longitude, pre, tmp, urban, cultivated, coniferous, decid_mixed, total_shrub_herbaceous,wetland, lake_water, bare_sparse'
+    value: 'median_no3,median_toc,slope_dep_vs_time, TOTN_dep, latitude, longitude,pre, tmp, urban, cultivated, coniferous, decid_mixed, total_shrub_herbaceous,wetland, lake_water, bare_sparse'
   tree_formula:
     value: 'median_no3 ~ .'
   extra_pairwise_plots:
@@ -25,7 +25,7 @@ params:
   pairwise_plots_same_scale:
     value: 'FALSE'
   logistic_formula: 
-    value: 'median_no3 ~ TOTN_dep + slope_dep_vs_time + TOTN_dep:slope_dep_vs_time + median_toc + TOTN_dep:median_toc + tmp + pre + decid_mixed + bare_sparse + coniferous + catchment_area + lake_water + total_shrub_herbaceous'
+    value: 'median_no3 ~ TOTN_dep + slope_dep_vs_time + TOTN_dep:slope_dep_vs_time + median_toc + TOTN_dep:median_toc + tmp + pre  + coniferous + decid_mixed + bare_sparse + lake_water + total_shrub_herbaceous'
 
 ---
 
