--- a/164parm_Currentstatus.Rmd
+++ b/164parm_Currentstatus.Rmd
@@ -462,12 +462,22 @@ cat("Data after removing missing predictors: n =", nrow(df_analysis), "\n")
 ### b. Correlations   
 ```{r, fig.width=10, fig.height=10}
 
+df_correlationplot <- df_analysis %>% 
+   select(-longitude, - latitude)
+
 gg <- GGally::ggcorr(
-  df_analysis, 
+  df_correlationplot, 
   method = c("complete.obs", "kendall"), 
   label = TRUE,
   hjust = 0.9, angle = -30) # +                    # slanted labels
-gg + coord_cartesian(x = c(-2, 20), y = c(-2,22))  # fix margins
+gg <- gg + 
+  coord_cartesian(x = c(-2, 20), y = c(-2,22))  # fix margins
+
+fn <- paste0("Figures/Correlation_matrices/",
+             substr(params$document_title, 1, 3), "_correlationplot.png")
+ggsave(fn, gg, width = 9, height = 9, dpi = 400)
+
+gg
 
 ```
 
