Delete random forest part and fix correlation

--- a/164parm_Currentstatus_without_randomforest.Rmd
+++ b/164parm_Currentstatus_without_randomforest.Rmd
@@ -472,7 +472,8 @@ gg <- GGally::ggcorr(
   label_size = 3,
   hjust = 0.9, angle = -30) # +                    # slanted labels
 gg <- gg + 
-  coord_cartesian(x = c(-2, 20), y = c(-2,22))  # fix margins
+  coord_cartesian(x = c(-2, ncol(df_correlationplot)), 
+                  y = c(0, ncol(df_correlationplot) + 1))  # fix margins
 
 run_code <- stringr::str_extract(params$document_title, "([^[[:blank:]]]+)")   # extract e.g. "164a1"
 fn <- paste0("Figures/Correlation_matrices/", run_code,
@@ -538,240 +539,10 @@ plot(ev.raw)
 
 # dir.create("Figures/Methods")
 
-png("Figures/Methods/Example_tree_164ab1.png", width = 16, height = 12, units = "in", res = 150)
+run_code <- stringr::str_extract(params$document_title, "([^[[:blank:]]]+)")   # extract e.g. "164a1"
+png(paste0("Figures/Methods/Example_tree_", run_code, ".png"), width = 16, height = 12, units = "in", res = 150)
 plot(ev.raw)
 dev.off()
 
 
 ```
-
-
-### c. Random forest  
-* Model called 'model1'
-```{r}
-
-model1 <- randomForest(as.formula(params$tree_formula), 
-                       data = full_set, 
-                       mtry = 5,
-                       importance = TRUE)
-
-model1
-
-```
-
-
-#### c1. Predict on training data
-Not relevant here  
-
-#### c2. Importance of variables   
-* Classification forests result in   
-    - mean_min_depth   
-    - accuracy_decrease  
-    - gini_decrease  
-    - no_of_nodes   
-    - times_a_root      
-* Regression forests result in     
-    - mean_min_depth   
-    - mse_increase  
-    - node_purity_increase  
-    - no_of_nodes   
-    - times_a_root      
-```{r 5c2_calculate_importance}
-
-# Calculation
-importance <- measure_importance(model1)
-
-```
-
-
-
-```{r}
-
-plot_multi_way_importance(importance, size_measure = "no_of_nodes", no_of_labels = 6)  
-plot_multi_way_importance(importance, x_measure = "mse_increase", y_measure = "node_purity_increase",
-                          size_measure = "p_value", no_of_labels = 6)
-
-importance %>%
-  arrange(desc(times_a_root))
-
-```
-
-
-
-#### c3. Random forest, show partial effects  
-
-```{r 5c3_calculate_partial_effects, warning=FALSE, message=FALSE, results='hide', cache = FALSE}
-
-# Which variables to include:
-variables_for_plot <- importance %>%
-  mutate(variable = levels(variable)[as.numeric(variable)]) %>%
-  arrange(desc(mse_increase)) %>%    # gini_decrease for classification trees
-  pull(variable) %>%
-  head(12)   # pick the first 12 variables (or less)
-
-# Calculation
-
-plotdata <- NULL  # will be list for storing results
-
-max_number_of_plots <- length(variables_for_plot)/2 %>% floor()
-
-for (i in 1:max_number_of_plots){
-  varno1 <- c(1,3,5,7,9,11)[i]
-  varno2 <- varno1 + 1
-  plotdata[[i]] <- model1 %>%
-    partial(pred.var = variables_for_plot[c(varno1, varno2)], chull = TRUE, progress = "text",
-            which.class = "1", prob = TRUE)
-}
-
-
-```
-
-
-```{r 5c3_calculate_partial_effects2, warning=FALSE, message=FALSE, results='hide'}
-
-### Extra plots
-
-plotpairs <- params$extra_pairwise_plots %>%
-  gsub(" ", "", ., fixed = TRUE) %>%
-  strsplit(split = ";") %>%
-  .[[1]] %>%
-  purrr::map(~strsplit(., split = ",")[[1]])
-
-for (plotvar in plotpairs){
-  # print(plotvar)
-  if (plotvar[1] %in% names(full_set) & plotvar[2] %in% names(full_set)){
-    i <- i + 1
-    plotdata[[i]] <- model1 %>%
-      partial(pred.var = c(plotvar[1], plotvar[2]), chull = TRUE, progress = "text",
-             which.class = "1", prob = TRUE)
-  }
-}
-
-
-```
-
-
-```{r 5c3_plot_partial_effects2}
-
-# Find range of predicted values for each graph
-ranges <- plotdata %>% purrr::map_dfc(~range(.$yhat))
-
-# use range of all the ranges
-for (i in 1:length(plotdata)){
-  
-  if (params$pairwise_plots_same_scale == "TRUE"){
-  
-    gg <- plot_pair_number(i, zrange = range(ranges))
-    print(gg)
-    
-  } else {
-    
-    gg <- plot_pair_number(i)
-    print(gg)
-
-  }
-  
-  # Save gg object for later plotting / changes
-  # Saved in Figures/Partial_plots' with name e.g. "gg_164a1_7.rds" for plot number 7
-  fn <- paste0(
-    "Figures/Partial_plots/gg_",
-    stringr::str_extract(params$document_title, "([^[[:blank:]]]+)"),   # extract e.g. "164a1"
-    "_", i, ".rds")
-  saveRDS(gg, fn)
-  
-}
-  
-
-```
-
-
-
-## 6. Linear regression      
-```{r, results  = "hold"}
-
-fm <- lm(
-  as.formula(params$logistic_formula),
-  data = df_analysis, 
-  na.action = "na.fail")
-
-dredged_models <- dredge(fm)                       # only once
-# saveRDS(dredged_models, "Data/164_all_dredged_models.rds")    # save it as it takes a couple of minutes
-# dredged_models <- readRDS("Data/164_all_dredged_models.rds")
-
-# cat("\n\nR2: \n")
-# mod1 <- get.models(dredged_models, 1)[[1]]  
-# summary(mod1)  
-
-```  
-
-### Best models  
-```{r}
-# subset(dredged_models, delta < 1)
-
-subset(dredged_models, delta < 2)
-
-# Alternative way of showing result (didn't become any better)
-# df <- subset(dredged_models, delta < 2)
-# select(as.data.frame(df) %>% round(6), -`(Intercept)`, -logLik, -AICc)
-
-```
-```{r, echo = FALSE}
-
-#
-# Function to get interactions and effects 
-#
-get_model_variables <- function(model){  
-  all_terms <- names(model$coefficients)
-  # Remove '(Intercept)'
-  all_terms <- all_terms[!all_terms %in% "(Intercept)"]
-  sel_interactions <- grepl(":", all_terms, fixed = TRUE)
-  # Removing interaction terms leaves us with the variables:
-  all_variables <- all_terms[!sel_interactions]
-  # Get interactions in a list
-  interaction_terms <- all_terms[sel_interactions]
-  interaction_list <- interaction_terms %>% strsplit(split = ":")
-  # Get additive variables
-  interaction_vars <- interaction_list %>% unlist()
-  additive_vars <- all_variables[!all_variables %in% interaction_vars]
-  list(
-    interaction_list = interaction_list,
-    additive_vars = additive_vars)
-}
-
-# Test
-# fit <- lm(sr ~ pop15*dpi + pop75*dpi + ddpi, data = LifeCycleSavings)
-# get_model_variables(fit)  
-
-```
-
-### Plots  
-```{r, message=FALSE}
-
-# Pick model with lowest AICc
-mod1 <- get.models(dredged_models, 1)[[1]]  
-
-modelvars <- get_model_variables(mod1)
-
-# Interactions: 2D plot 
-if (length(modelvars$interaction_list) > 0){
-  modelvars$interaction_list %>% purrr::walk(
-    ~visreg(mod1, .x[1], by = .x[2], scale = "response")
-  )
-}
-
-# Additive effects: 1D plot
-if (length(modelvars$additive_vars) > 0){
-  par(mfrow = c(2,3), mar = c(4,5,2,1), oma = c(0,0,2,0))
-  for (var in modelvars$additive_vars)
-    visreg(mod1, var, scale = "response")  
-}
-
-```
-
-
-
-
-
-
-
-
