Do correlation plots for 166+167

--- a/166parm_Time_series_results_James.Rmd
+++ b/166parm_Time_series_results_James.Rmd
@@ -9,11 +9,11 @@ output:
     keep_md: true
 params:
   document_title: 
-    value: '166x Analyse NO3 decline - test run'
+    value: '166d1x Analyse NO3 decline - test run'
   text_dataset: 
     value: 'Data with slope_dep_vs_time, NO3, and TOTN_dep'
   selected_vars: 
-    value: 'slope_no3_vs_time,catchment_area, TOC,slope_dep_vs_time, NO3, TOTN_dep, latitude, longitude, altitude,pre, tmp, slope_pre, slope_tmp, urban, cultivated, coniferous, decid_mixed, total_shrub_herbaceous,wetland, lake_water, bare_sparse'
+    value: 'slope_no3_vs_time, slope_toc_vs_time, TOC, NO3, slope_dep_vs_time, TOTN_dep, latitude, longitude,slope_pre, pre, slope_tmp, tmp, urban, cultivated, coniferous, decid_mixed, total_shrub_herbaceous,wetland, lake_water, bare_sparse'
   response_variable:
     value: 'slope_no3_vs_time'  
   extra_pairwise_plots:
@@ -471,15 +471,27 @@ cat("Data after removing missing predictors: n =", nrow(df_analysis), "\n")
 ### b. Correlations   
 ```{r, fig.width=10, fig.height=10}
 
+df_correlationplot <- df_analysis %>% 
+   select(-longitude, - latitude)
+
 gg <- GGally::ggcorr(
-  df_analysis, 
+  df_correlationplot, 
   method = c("complete.obs", "kendall"), 
   label = TRUE,
+  label_size = 3,
   hjust = 0.9, angle = -30) # +                    # slanted labels
-gg + coord_cartesian(x = c(-2, 20), y = c(-2,22))  # fix margins
+gg <- gg + 
+  coord_cartesian(x = c(-2, ncol(df_correlationplot)), 
+                  y = c(0, ncol(df_correlationplot) + 1))  # fix margins
 
+run_code <- stringr::str_extract(params$document_title, "([^[[:blank:]]]+)")   # extract e.g. "164a1"
+fn <- paste0("Figures/Correlation_matrices/", run_code,
+             "_correlationplot.png")
+ggsave(fn, gg, width = 9, height = 9, dpi = 400)
 
-```  
+gg
+
+```
 
 
 
